# jver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: install-jver.ps1  uninstall-jver.ps1
src/: main.py
