[project]
name = "jver"
version = "0.1.0"
description = "A java version selector for Windows"
authors = [
    {name = "Gabriel Alves",email = "gabrielrodriguesalves693@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "rich (>=14.2.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "src", from = "."}]

[tool.poetry.scripts]
jver = "src.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
